deleted the binary minor modification of abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,8 +1,7 @@
-Fault management (FM) play a vital role in the daily operation of teleco
-providers, however, Network Function Virtalization (NFV), despite its glorious
-technical advantages, aggravates FM in multiple ways: \textit{first}, each
-abstraction layer has its own approaches to treat faults, coordination between
-them is still a missing piece; \textit{secondly}, an effective FM system at each
-single layer does not necessarily lead to an overall efficient FM system. A
-cross-layer FM system is therefore needed. In this paper, we analyze in details
-the scenario, problems and challenges faced by constructing such a system.        
+Fault management (FM) play a vital role in the daily operation of teleco providers, however, we identify in
+this paper that, Network Function Virtalization (NFV), despite its glorious technical advantages, aggravates
+FM in multiple ways: \textit{first}, each abstraction layer has its own approaches to treat faults,
+coordination between them is still a missing piece; \textit{secondly}, an effective FM system at each single
+layer does not necessarily lead to an overall efficient FM system. A cross-layer FM system is therefore
+needed. In this paper, we analyze in details the scenario, problems and challenges faced by constructing such
+a system.        
