--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -1,7 +1,8 @@
 \label{problemstatement}
+
 \begin{table*}[!t]
 \centering
-\caption{A Table on Specific FM Approaches to Different NFV Layers}
+\caption{Specific FM Approaches to Different NFV Layers}
 \label{tbl:layers}
 	\begin{tabular}{c|p{3cm}|p{5cm}}
 		\hline
@@ -19,7 +20,7 @@ vendor specific methods to manage faults of virtual devices \\
 	\end{tabular}
 \end{table*} 
  
-The central problem in the cross-layer fault management lays in the coordination
+The central challenge in the cross-layer fault management lays in the coordination
 of various FM appraoches from different layers involved in the NFV architecture
 and, frequently, also within individual layers. We classify those problem in
 \emph{vertical} and \emph{horizontal} dimensions. In this section, we analyze
@@ -30,14 +31,23 @@ holistic system when failures impact.
 \subsection{Problems of Vertical Integration of FM Approaches} 
 
 Typically each layer of NFV architecture possesses its own specific FM
-approaches to ensure the services offered on this particular layer. There is
-hardly any information exchanged between layers regarding FM and let alone the
-coordination of separated layers. We argue that such a separate approach does
-not meet requirements of high efficient overall FM system.  
+approaches to ensure the services offered on this particular layer as we
+illustrate in the Table~\ref{tbl:layers}. There is hardly any information
+exchanged between layers regarding FM and let alone the coordination of
+separated layers, let alone the coordinations among them. We argue that such a
+separate approach does not meet requirements of a high efficient overall FM
+system. Failing to do so will introduce various sorts of inconsistent problems
+in terms of false positives in failure detections, inconsistent fault recovery
+actions, which will only aggravate the holistic fault management process in general.
 
-\subsubsection{FM between Virtualization and Physical Layers}
+\subsubsection{Virtualization and Physical Layers}
 
-\subsubsection{FM between NFVI and NFV Layers}
+Virtualization technology enable the physical resources to be shared among
+multiple virtual instances in terms of computing, networking and storage capabilities. 
+While there are different specific forms of resource virtualization, e.g.
+server, network, application etc., there are all 
+
+\subsubsection{NFVI and NFV Layers}
 
 \subsubsection{FM by Orchestration of NFV Services}
 
