--- a/scenario.tex
+++ b/scenario.tex
@@ -1,5 +1,5 @@
 \label{scenario}
-\begin{figure}[ht]
+\begin{figure}[t]
 	\centering
 	\includegraphics[scale=0.23]{fig/architecture-single.pdf}
 	\caption{NFV Reference Architecture}
