--- a/introduction.tex
+++ b/introduction.tex
@@ -1,11 +1,11 @@
 \label{intro}
 Thank its flexibility which directly leads to significant savings on OPEX \&
-CAPEX as well as increased agility on service innovations, the concept of
+CAPEX as well as its increased agility on service innovations, the concept of
 NFV~\cite{nfv} has been prevailing recently among teleco service operators. The
 fundamental idea behinds NFV is to build virtualized software network devices
 based on the hypervisor and Commercial-Off-The-Shelf (COTS) hardware. The
-infrastructure which NFV is based on is thus not built specifically for high
-reliability and availability; on the other hand, teleco services normally
+infrastructure on which NFV is based is thus not built specifically for high
+reliability and availability purposes; on the other hand, teleco services normally
 requires five nines of availability which is about an annual outage time of 5
 minutes. Providers are now facing with the dilemma: while enjoying high
 flexibility and saving costs, they have to accept the risks of reliability. In
@@ -20,13 +20,14 @@ including detection of system faults and toleration as well as isolation of
 system anomalies. Finally impacted system should be recovered and services
 restored in a timely manner. One may argue however that each layer involved in
 the holistic NFV system already possesses its own mechanism to deal with fault,
-however the question is: is it enough to have a collection of individual FM
-systems to make a holistically efficient NFV FM system? If not, what can be done
-about it? In this paper, we elaborate to analyze and clarify the problematics.
-The purpose of this paper is to identify gaps and research challenges of
-building of highly efficient NFV FM system. This paper is organized as follows:
-Section \ref{scenario} presents a typical NFV scenario, on which our further
-discussions are based; in Section~\ref{problemstatement} we make a in-depth
-analysis of the issues and problems involved in FM of NVF and try to crystallize
-research challenges; in Section~\ref{research} we discuss research issues and a
-roadmap to solve this complex problem of cross-layer FM.  
+however a fundamental question in this case one should rise: is it enough to
+have a collection of individual FM systems to make a holistically efficient NFV
+FM system? If not, what can be done about it? In this paper, we elaborate to
+analyze and clarify the problematics.  The purpose of this paper is to identify
+gaps and research challenges of building of highly efficient NFV FM system. This
+paper is organized as follows: Section \ref{scenario} presents a typical NFV
+scenario, on which our further discussions are based; in
+Section~\ref{problemstatement} we make a in-depth analysis of the issues and
+problems involved in FM of NVF and try to crystallize research challenges; in
+Section~\ref{research} we discuss research issues and a roadmap to solve this
+complex problem of cross-layer FM.  
