section on research added

--- a/clfman.bib
+++ b/clfman.bib
@@ -1,3 +1,17 @@
+@article{amir1995totem,
+  title={The Totem single-ring ordering and membership protocol},
+  author={Amir, Yair and Moser, Louise E and Melliar-Smith, Peter M and Agarwal,
+Deborah A and Ciarfella, Paul},
+  journal={ACM Transactions on Computer Systems (TOCS)},
+  volume={13},
+  number={4},
+  pages={311--342},
+  year={1995},
+  publisher={ACM}
+}
+
+
+
 @article{depdef,
   title={Basic concepts and taxonomy of dependable and secure computing},
   author={Avizienis, Algirdas and Laprie, J-C and Randell, Brian and Landwehr,
