--- a/research.tex
+++ b/research.tex
@@ -1,1 +1,5 @@
 \label{research}
+
+With problems that involve in the FM of NFV clarified, in this section, we
+dedicate to discussion and categorization of the potential research areas and
+challenges need to be overcame. 
