--- a/clfman.tex
+++ b/clfman.tex
@@ -64,7 +64,7 @@
 \section{Conclusion}
 	\input{conclusion}
 
-\section*{Acknowledgment}
+%\section*{Acknowledgment}
 
 \bibliographystyle{IEEEtran}
 \bibliography{clfman}
